[metadata]
name = streamx
version = 0.0.1
author = Mason Flint
author_email = masonflint44@gmail.com
description = This package provides a modern, easy-to-use, and versatile solution for working with streams of data in an asynchronous fashion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MasonFlint44/streamx
project_urls =
    Bug Tracker = https://github.com/MasonFlint44/streamx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Object Brokering

[options]
packages = find:
python_requires = >=3.11
install_requires =

